add : verify nunjunks , try vuepress blog engine ; init : esbuild and algorithm and db-xx topic

--- a/team-blog/hexo-power/_config.yml
+++ b/team-blog/hexo-power/_config.yml
@@ -105,7 +105,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-pure
+theme: hexo-theme-matery
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
