add : asm practice and web init

--- a/team-blog/vuepress-power/package.json
+++ b/team-blog/vuepress-power/package.json
@@ -6,7 +6,7 @@
   "author": "daqiang@daqiang.me",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "docs:dev": "DEBUG=vuepress* && vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
