--- a/web-template-nunjucks/package.json
+++ b/web-template-nunjucks/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/we-run/coding-space#readme",
   "dependencies": {
+    "axios": "^0.25.0",
     "chokidar": "^3.5.3",
     "nunjucks": "^3.2.3"
   }
