--- a/team-blog/hexo-power/package.json
+++ b/team-blog/hexo-power/package.json
@@ -5,23 +5,34 @@
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "hexo deploy",
+    "deploy": "sh dep.sh",
     "server": "hexo server"
   },
   "hexo": {
     "version": "6.0.0"
   },
   "dependencies": {
+    "bulma-stylus": "0.8.0",
     "hexo": "^6.0.0",
+    "hexo-component-inferno": "^1.0.2",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-searchdb": "^1.4.0",
+    "hexo-generator-sitemap": "^2.2.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-leancloud-counter-security": "^1.5.0",
+    "hexo-pagination": "^2.0.0",
+    "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-less": "^4.0.0",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-word-counter": "0.0.3",
+    "inferno": "^7.3.3",
+    "inferno-create-element": "^7.3.3"
   }
 }
