--- a/team-blog/hexo-power/_config.yml
+++ b/team-blog/hexo-power/_config.yml
@@ -14,7 +14,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://daqiang.me/team-blog/
+url: http://werun.daqiang.me/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
