--- a/team-blog/hexo-power/package.json
+++ b/team-blog/hexo-power/package.json
@@ -19,7 +19,7 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-searchdb": "^1.4.0",
-    "hexo-generator-sitemap": "^2.2.0",
+    "hexo-generator-seo-friendly-sitemap": "^0.2.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-leancloud-counter-security": "^1.5.0",
     "hexo-pagination": "^2.0.0",
